[project]
name = "robust-chat-filter"
version = "0.1.0"
description = "Real-time character-level CNN (VDCNN) for toxicity and spam detection in Russian chats."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2026.3.0",
    "huggingface-hub>=1.10.2",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]
